[tool.poetry]
name = "load-test-unoserver"
version = "0.1.0"
description = ""
authors = ["Spencer Reyka <spencer.reyka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.11.8"
matplotlib = "^3.9.3"
unoserver = "^3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
